fixed spacing and margins

--- a/style.css
+++ b/style.css
@@ -225,7 +225,7 @@ h2 {
     margin-bottom: 15px;
 }
 
-.icome__title { color: #28B9B5; }
+.income__title { color: #28B9B5;margin-left: 30%; }
 .expenses__title { color: #FF5049; }
 
 .item {
@@ -301,3 +301,18 @@ h2 {
 
 .unpaid .item__percentage { box-shadow: 0 2px 6px 0 rgba(0, 0, 0, 0.1); }
 .unpaid:hover .item__description { font-weight: 900; }
+
+#footer {    
+    position: absolute;
+    bottom:0;
+    width: 100%;
+    height: 2.5rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;    
+}
+
+#footer a {
+    text-decoration: none;
+    color:black;
+}
